unexpected changes found

--- a/codecov.yml
+++ b/codecov.yml
@@ -12,7 +12,7 @@ coverage:
         informational: true
         threshold: 30%
         target: 0%
-    changes: true
+    changes: false
 
 github_checks:
   annotations: true
