--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,9 @@ name: Main
 on:
   push:
     # add your default branch if is not there
-    branches: [ trying, staging, main, master, develop, development ]
+    # however you really wont to run CI on that branch
+    # do not foregt set env.RUNALL_ONPUSH to true
+    branches: [ trying, staging ]
   pull_request:
     types: [ synchronize, opened, ready_for_review, labeled, unlabeled ]
     paths-ignore:
